classDiagram
    class Error {
        +string message
        +string? stack
    }
    
    class GitError {
        +string message
        +unknown? cause
    }
    
    class GitCommandError {
        +string command
        +string stderr
    }
    
    class GitNotRepositoryError {
        +string path
    }
    
    class BranchNotFoundError {
        +string branchName
    }
    
    class ExternalCommitParserError {
        +string message
        +unknown? cause
    }
    
    class WorkspaceError {
        +string message
        +string? operation
        +unknown? cause
    }
    
    class GitHubError {
        +string message
        +string? operation
        +unknown? cause
    }
    
    class VersionCalculationError {
        +string message
        +string? packageName
        +unknown? cause
    }
    
    class OverridesLoadError {
        +string message
        +unknown? cause
    }
    
    class NPMError {
        +string message
        +string? operation
        +unknown? cause
    }
    
    class PublishError {
        +string message
        +string? packageName
        +unknown? cause
    }
    
    class TagError {
        +string message
        +string? tagName
        +string operation
        +unknown? cause
    }
    
    Error <|-- GitError
    Error <|-- GitCommandError
    Error <|-- GitNotRepositoryError
    Error <|-- BranchNotFoundError
    Error <|-- ExternalCommitParserError
    Error <|-- WorkspaceError
    Error <|-- GitHubError
    Error <|-- VersionCalculationError
    Error <|-- OverridesLoadError
    Error <|-- NPMError
    Error <|-- PublishError
    Error <|-- TagError
    
    note for GitError "Data.TaggedError<br/>Effect error handling"
